# beep

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
.cargo/: config.toml
src/: app.rs  dummy_web_imports.rs  lib.rs  main.js  main.rs  tauri-loader.js  tauri_utils.rs  timer_logic.rs  utils.js  wasm-initializer.js  wasm-loader.js  wasm-utils.js  wasm_specific.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
