[package]
name = "beep-ui"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
# 单独添加宏依赖（Leptos 0.7 拆分出的独立 crate）
leptos_meta = { version = "0.8.5" }
leptos_macro = "0.8.6"
leptos_router = { version = "0.8.5" }
leptos_dom = "0.8.5"

# Tauri核心依赖
tauri = "2.7.0"

# 前端交互所需的 WASM 绑定
# tauri-wasm = "2.7.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77" 


chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "HtmlElement"
] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
yansi = "1.0.1"
log = "0.4.27"


[workspace]
members = ["src-tauri"]

# 开发依赖
[dev-dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
