[package]
name = "beep-ui"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.5", features = ["csr"] }
# 单独添加宏依赖（Leptos 0.7 拆分出的独立 crate）
leptos_meta = { version = "0.8.5" }
leptos_macro = "0.8.5"
leptos_router = { version = "0.8.5" }
leptos_dom = "0.8.5"
wasm-bindgen = "0.2"
# 通用依赖
console_log = "1.0.0"
yansi = "1.0.1"
log = "0.4.27"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"

# Tauri核心依赖 - 仅在非WASM目标编译
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tauri = { version = "2.7.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WebAssembly特定依赖
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "HtmlElement",
    "Event",
    "HtmlInputElement",
    "console"
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"


[workspace]
members = ["src-tauri"]

# 特性定义
[features]
# 添加tauri特性以消除警告
tauri = []

# 开发依赖

[dev-dependencies]
console_error_panic_hook = "0.1.7"
