
[package]
name = "beep"
version = "0.0.2"
edition = "2021"
rust-version = "1.88"
authors = ["A.M."]
description = "A Tauri App"
build = "build.rs" 

[lib]
name = "beep"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2"
# 注意使用连字符 "-" 而非下划线 "_"
tauri-plugin-notification = "2.3.0"  # 正确名称
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1"
once_cell = "1.18.0"
tokio = { version = "1.47.1", features = ["full"] }
# wasm-bindgen 通常不是后端代码所需的依赖
# wasm-bindgen = "0.2"
chrono = "0.4" 
# [features]
# default = ["custom-protocol"]
# custom-protocol = ["tauri/custom-protocol"]

